--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <img src="img/pics/backyard_500.jpg" alt="">
       </div>
       <div class="item">
-        <img src="img/pics/livingroom_500.jpg" alt="">
+        <img src="img/pics/livingroom2_500.jpg" alt="">
       </div>
     </div>
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
