added new copy to paragraphs.

--- a/index.html
+++ b/index.html
@@ -348,23 +348,24 @@
       <div class="span8">
 
         <p class="lead">
-          Custom built* for the present owner in 1991, this 4+ bedroom, 3 bath Center-Entrance Colonial is set on a 1/2
-          acre level lot on a quiet, tree lined street.  It is just steps from the Fiske School and an easy walk to the town center.
-          The main level’s open floor plan features a large fireplace surrounded by built-in shelves and cabinets in the family
-          room and a china closet in the dining room.  The eat-in kitchen has ample workspace including a granite center counter
-          with sink.  In addition to plenty of cabinet space, there is a walk-in pantry.  French doors in the dining room open out
-          to a screened porch and a bluestone patio in the back of the house.
+          Custom built* for the present owner in 1991, this 4+ bedroom, 3 bath Center-Entrance Colonial is set on a &frac12; acre level lot
+          on a quiet, tree lined street.  It is just steps from the Fiske School and an easy walk to the town center.  The main level's
+          open floor plan features a large fireplace surrounded by built-in shelves and cabinets in the family room and a china closet
+          in the dining room.  The eat-in kitchen, updated in 2009, has ample workspace including a granite center counter with a
+          second sink.  Fabulous cabinet space and walk-in pantry make this kitchen the chef's dream.  French doors in the dining
+          room open out to a screened porch and a bluestone patio in the back of the house.
         </p>
 
         <p>
-        The spacious Master Bedroom on the second floor features an en suite bathroom and two walk-in closets. Three further
-        bedrooms have generous closets and  built-in shelves.  In addition there is  spacious room over the attached garage, suitable
-        as a bedroom, home office, art studio, au pair or in-law suite. It includes a sink and three walk-in closets.
+          The spacious Master Bedroom on the second floor features an en suite bathroom and two walk-in closets. Three further bedrooms
+          have generous closets and  built-in shelves.  In addition there is a large room over the attached garage with a separate
+          staircase from the mud room.  It is suitable as a bedroom, home office, art studio, au pair or in-law suite. It includes a
+          sink and three walk-in closets.
         </p>
 
         <p>
-        The grounds include a fenced vegetable garden and two Asian pear trees.  Perennial flower beds and mature flowering shrubs
-        surround the house.  A large mulched area in the backyard is perfect for a swing set or picnic table.
+          The grounds include a fenced vegetable garden and 2 Asian pear trees.  Perennial flower beds and mature flowering shrubs
+          surround the house.  A large mulched area in the backyard is ready for a swing set or picnic table.
         </p>
 
         <p>
