made all paragraphs the same size

--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
     .nowrap {
       white-space: nowrap;
     }
+
+    #text-description p {
+      font-size: 110%;
+    }
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -345,9 +349,9 @@
 
     <div class="row">
 
-      <div class="span8">
+      <div id="text-description" class="span8">
 
-        <p class="lead">
+        <p>
           Custom built* for the present owner in 1991, this 4+ bedroom, 3 bath Center-Entrance Colonial is set on a &frac12; acre level lot
           on a quiet, tree lined street.  It is just steps from the Fiske School and an easy walk to the town center.  The main level's
           open floor plan features a large fireplace surrounded by built-in shelves and cabinets in the family room and a china closet
