added garage and basement to sidebar

--- a/index.html
+++ b/index.html
@@ -409,6 +409,13 @@
 
           <dt>Fireplace:</dt>
           <dd>yes</dd>
+
+          <dt>Basement:</dt>
+          <dd>Full</dd>
+
+          <dt>Garage:</dt>
+          <dd>2 car and</dd>
+          <dd>storage area</dd>
         </dl>
 
       </div>
