flipped the tax table on its side.

--- a/index.html
+++ b/index.html
@@ -601,15 +601,13 @@
         <h2>Tax Assessment</h2>
 
         <table class="table">
-          <thead>
-            <tr>
-              <th>2012 Assessment</th>
-              <th>2012 taxes</th>
-            </tr>
-          </thead>
           <tbody>
             <tr>
+              <th>2012 Assessment</th>
               <td>$1,086,000</td>
+            </tr>
+            <tr>
+              <th>2012 Taxes</th>
               <td>$16,257</td>
             </tr>
           </tbody>
