made contact info stand out a lot more.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     /* Carousel base class */
     .carousel {
-      margin-bottom: 60px;
+      margin-bottom: 20px;
     }
 
     .carousel .container {
@@ -267,6 +267,10 @@
     #text-description p {
       font-size: 110%;
     }
+
+    dl {
+      margin-top: 0;
+    }
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -317,36 +321,28 @@
         <img src="img/pics/livingroom2_500.jpg" alt="">
       </div>
     </div>
+
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+
+    <div class="container text-center">
+      <h3>
+        Contact:
+        <a href="mailto:info@62ColonyRd.com">info@62colonyrd.com</a> | 781 862-2746
+      </h3>
+    </div>
+
   </div><!-- /.carousel -->
 
 
   <div id="main" class="container">
     <div class="row">
-
       <div class="span8">
         <h2>
           For Sale by Owner
         </h2>
-      </div>
-
-      <div class="span4">
-        <dl class="dl-horizontal">
-          <dt>Contact:</dt>
-          <dd>
-            <a href="mailto:info@62ColonyRd.com">info@62colonyrd.com</a></br>
-          </dd>
-
-          <dt>Phone:</dt>
-          <dd>
-            <strong>781 862-2746</strong>
-          </dd>
-        </dl>
-      </div>
-
     </div>
-
+    </div>
     <div class="row">
 
       <div id="text-description" class="span8">
