added open-house stuff.

--- a/index.html
+++ b/index.html
@@ -271,6 +271,15 @@
     dl {
       margin-top: 0;
     }
+
+    .open-house {
+      background-color: rgb(0, 136, 204);
+      color: white;
+      font-size: 25px;
+      font-weight: bold;
+      padding: 10px;
+      margin-top: -1px;
+    }
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -324,6 +333,10 @@
 
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+
+    <div class="open-house text-center">
+      Open House Sunday March 17th 1:00 - 4:00 pm
+    </div>
 
     <div class="container text-center">
       <h3>
