--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <div class="row">
       <div class="span8">
         <h2>
-          For Sale by Owner
+          For Sale by Owner - $1,279,000
         </h2>
     </div>
     </div>
